deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-1 
  labels:
    appName: testwebapp1
spec:
  minReadySeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
        appName: testwebapp1
  replicas: 2
  template:
    metadata:
      labels:
        appName: testwebapp1
    spec:
      containers:
        - name: testwebapp1
          image: index.docker.io/gvkr1409/testwebapp-1:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          readinessProbe:
                initialDelaySeconds: 20
                periodSeconds: 5
                timeoutSeconds: 10
                successThreshold: 1
                failureThreshold: 5
                httpGet:
                    path: /TestWebApp
                    port: 8080
          livenessProbe:
                initialDelaySeconds: 20
                periodSeconds: 5
                timeoutSeconds: 10
                successThreshold: 1
                failureThreshold: 5
                httpGet:
                    path: /TestWebApp
                    port: 8080
          
      imagePullSecrets:
        - name: docker-creds


---
apiVersion: v1
kind: Service
metadata:
    name: test-tom
spec:
    selector:
        appName: testwebapp1
    ports:
    - port: 5001
      targetPort: 8080
