deployment-test-ingress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testwebapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testwebapp-vs
spec:
  hosts:
  - "*"
  gateways:
  - testwebapp-gateway
  http:
  - match:
    - uri:
        exact: /TestWebApp
    route:
    - destination:
        host: my-testwebapp
        port:
          number: 80
