nginx-ingress-deploy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
#  namespace: <nsname>
spec:
  ingressClassName: nginx
  rules:
#  - host: <domain>
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deploy1
            port:
             number: 5000
      - pathType: Prefix
        path: "/TestWebApp"
        backend:
          service:
            name: test-tom
            port:
              number: 5001
